# Chainlink-hackathon

backend/: .env.example  Cargo.toml  README.md
backend/abi/: PredictionMarket.json
backend/migrations/: 001_initial_schema.sql
backend/src/: error.rs  main.rs  types.rs
backend/src/db/: mod.rs
backend/src/routes/: actions.rs  markets.rs  mod.rs  orders.rs  portfolio.rs
backend/src/services/: blockchain.rs  mod.rs  orderbook.rs  orders.rs
contracts/broadcast/CreateMarket.s.sol/11155111/: run-latest.json
contracts/broadcast/Deploy.s.sol/11155111/: run-1772659274074.json
contracts/script/: CreateMarket.s.sol  Deploy.s.sol
contracts/src/: IReceiver.sol  MockUSDC.sol  OutcomeToken.sol  PredictionMarket.sol
contracts/test/: MockUSDC.t.sol  OutcomeToken.t.sol  PredectionMarket.t.sol
hello-tee/: .env
hello-tee/my-workflow/: .cre_build_tmp.js  main.ts
hello-tee/my-workflow/config/: config.staging.json
watcher/: .env.example  .gitignore  Cargo.toml  README.md  SPEC.md  build.rs
watcher/scripts/: sync-abi.sh
watcher/src/: config.rs  cursor.rs  db.rs  events.rs  main.rs
