[package]
name = "watcher"
version = "0.1.0"
edition = "2021"
description = "Blockchain event watcher for PredictionMarket - keeps DB in sync"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server (health/status)
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# Ethereum
ethers = { version = "2", features = ["abigen"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }

# Config & env
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"
